# PicoMSO

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: dev_release.yaml  release.yaml
docs/: architecture.md  building.md  libsigrok.md  protocol.md  repository-transition.md
docs/libsigrok_references/fx2lafw/: README.md
firmware/: CMakeLists.txt  README.md
firmware/app/: CMakeLists.txt  CMakePresets.json  main.c
firmware/common/: CMakeLists.txt  README.md
firmware/common/include/: capture_buffer.h  capture_controller.h  debug.h  types.h
firmware/common/src/: capture_buffer.c  capture_controller.c  debug.c
firmware/examples/usb_control_plane/: CMakeLists.txt  main.c
firmware/integration/: CMakeLists.txt
firmware/integration/include/: dummy_transport.h  integration.h
firmware/integration/src/: dummy_transport.c  integration.c
firmware/mixed_signal/: CMakeLists.txt  README.md
firmware/mixed_signal/include/: logic_capture.h  mixed_capture.h  scope_capture.h
firmware/mixed_signal/src/: logic_capture.c  logic_capture.pio  mixed_capture.c  scope_capture.c  scope_trigger.pio
firmware/protocol/: CMakeLists.txt  README.md
firmware/protocol/include/: protocol.h  protocol_packets.h
firmware/protocol/src/: protocol.c  protocol_dispatch.c
firmware/transport/: CMakeLists.txt
firmware/transport/include/: transport.h  usb_transport.h
firmware/transport/src/: transport.c  usb_transport.c
firmware/transport/usb/: CMakeLists.txt  usb.c  usb.h  usb_common.h  usb_config.c  usb_config.h  usb_transport.c  usb_transport.h
host/libsigrok/picomso/: CMakeLists.txt  README.md  api.c  api.h  protocol.c  protocol.h  test_driver.c
host/libsigrok/picomso/tests/: test_driver.c
logic_analyzer_rp2040/src/: CMakeLists.txt  capture.c  common.h
mobile_app/: README.md  analysis_options.yaml  pubspec.yaml
mobile_app/android/app/: build.gradle
mobile_app/android/app/src/main/: AndroidManifest.xml
mobile_app/android/app/src/main/kotlin/com/example/picomso/: MainActivity.kt
mobile_app/lib/: app.dart  main.dart
mobile_app/lib/controllers/: capture_controller.dart  decoder_controller.dart  device_controller.dart  viewport_controller.dart
mobile_app/lib/domain/decoders/: decoder_interface.dart  i2c_decoder.dart  spi_decoder.dart  uart_decoder.dart
mobile_app/lib/domain/models/: analog_track.dart  capture_mode.dart  capture_request.dart  capture_session.dart  decoder_result.dart  device_info.dart  digital_track.dart  min_max_pyramid.dart  trigger_config.dart  viewport_state.dart
mobile_app/lib/protocol/: capture_request_builder.dart  protocol_codec.dart  protocol_constants.dart
mobile_app/lib/repository/: capture_repository.dart  device_repository.dart
mobile_app/lib/transport/: transport_interface.dart  usb_transport.dart
mobile_app/lib/ui/capture_run/: capture_run_screen.dart
mobile_app/lib/ui/capture_setup/: capture_setup_sheet.dart
mobile_app/lib/ui/decoder_config/: decoder_config_sheet.dart
mobile_app/lib/ui/home/: home_screen.dart
mobile_app/lib/ui/settings/: settings_screen.dart
mobile_app/lib/ui/shared/theme/: app_theme.dart
mobile_app/lib/ui/shared/widgets/: connection_state_chip.dart
mobile_app/lib/ui/waveform/: waveform_viewer_screen.dart
mobile_app/lib/ui/waveform/painters/: analog_track_painter.dart  cursor_painter.dart  decoder_overlay_painter.dart  digital_track_painter.dart  grid_painter.dart
mobile_app/lib/ui/waveform/widgets/: channel_label_list.dart  cursor_readout_panel.dart  decoder_result_panel.dart
mobile_app/test/controllers/: capture_controller_test.dart
mobile_app/test/domain/decoders/: uart_decoder_test.dart
mobile_app/test/protocol/: protocol_codec_test.dart
oscilloscope_rp2040/src/: CMakeLists.txt  common.h  main.c  oscilloscope.c  protocol.c
src/hardware/picomso/: api.c  protocol.c  protocol.h
udev/: 99-picomso.rules
utils/: picomso_analog.py  usb_test.py
